fixed z-index of intro-message on homepage

--- a/css/partials/_index.scss
+++ b/css/partials/_index.scss
@@ -32,7 +32,7 @@
   text-align: center;
   padding-left: 4%;
   padding-right: 4%;
-  z-index: 1;
+  //z-index: 1;
 }
 
 #intro-message h1 {
