--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@
   text-align: center;
   padding-left: 4%;
   padding-right: 4%;
-  z-index: 1;
 }
 
 #intro-message h1 {
